Istio/entry_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: entry
spec:
  hosts:
  - "*"
  gateways:
  - entry-gateway
  http:
  - match:
    - uri:
        exact: /backend/hello
    route:
    - destination:
        host: entry
        port:
          number: 8080
  - match:
    - uri:
        exact: /version
    route:
    - destination:
        host: svc
        port:
          number: 8080
        subset: v2
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: svc
        port:
          number: 8080
        subset: v2
