Istio/svc-entry-test-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc-entry
spec:
  hosts:
  - "*"
  gateways:
  - entry-gateway
  http:
  - match:
    - uri:
        exact: /version
    route:
    - destination:
        host: svc
        port:
          number: 8080
        subset: v2
