Istio/svc-test-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc
spec:
  hosts:
    - svc
  http:
  - match:
    - headers:
        custom:
          exact: "svc2"
    route:
    - destination:
        host: svc
        subset: v2
  - route:
    - destination:
        host: svc
        subset: v1
